2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IType.cs: Worked on dom.

2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Sanitise autogenerated default
	  namespaces properly.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs: Fixed some dom
	  persistence bugs.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ProjectCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DefaultParserContext.cs,
	  MonoDevelop.Projects.Dom/IParserContext.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Worked on new
	  dom.

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/WorkspaceItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs: Added Loading flag.
	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/Workspace.cs,
	  MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: Track api
	  changes.
	* MonoDevelop.Projects/SolutionFolder.cs: Added new method for adding
	  an item which creates the solution configurations if required.
	* MonoDevelop.Projects/Solution.cs: Properly create child
	  configurations in AddConfiguration. Added ConvertToFormat method.
	* MonoDevelop.Projects/SolutionEntityItem.cs: Implement
	  ConvertToFormat. Return the default configuration if no active
	  configuration is found.
	* MonoDevelop.Projects/IWorkspaceObject.cs: Removed setter for